# Hexagon

./: CMakeLists.txt  main.cpp
src/Core/CoreLoop/: CoreLoop.cpp  CoreLoop.h
src/Core/ECS/Components/: BaseComponent.cpp  BaseComponent.h  SpriteRenderer.cpp  SpriteRenderer.h
src/Core/ECS/Entities/: Entity.h  Entity.tpp
src/Core/ECS/Systems/: HierarchySystem.cpp  HierarchySystem.h  RenderSystem.cpp  RenderSystem.h
src/Core/ECS/Systems/Factories/: EntityFactory.cpp  EntityFactory.h  SpriteRendererFactory.cpp  SpriteRendererFactory.h
src/Core/Utils/: Color.cpp  Color.h  Sprite.cpp  Sprite.h
src/Game/: GameLoop.cpp  GameLoop.h  Tile.cpp  Tile.h  TileManager.cpp  TileManager.h
src/Infrastructure/Core/: CoreLoop.cpp  CoreLoop.h  main.cpp
src/Infrastructure/Core/CoreLoop/: CoreLoop.cpp  CoreLoop.h  main.cpp
src/Infrastructure/Core/ECS/Components/: BaseComponent.cpp  BaseComponent.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h
src/Infrastructure/Core/ECS/Entities/: Entity.h  Entity.tpp
src/Infrastructure/Core/ECS/Systems/: RenderSystem.cpp  RenderSystem.h
src/Infrastructure/Core/Utils/: Sprite.cpp  Sprite.h
src/Infrastructure/Exceptions/: Core_Exception.h  SDL_Exception.h
